updated button added

--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -400,8 +400,10 @@
                             class="fa-solid fa-thumbs-down"></i> Dropped</a></li>
                 </ul>
             </div>
-            <button class="btn btn-sm bg-info rounded-0 text-white"><i class="fa-regular fa-pen-to-square"></i> Edit
+            <button class="btn btn-sm bg-info rounded-0 text-white" onclick="rowEdit()"><i class="fa-regular fa-pen-to-square"></i> Edit
                 Info
+            </button>
+            <button class="btn btn-sm bg-warning rounded-0 text-white"><i class="fa-regular fa-pen-to-square"></i> Update
             </button>
         </div>
         <h3 class="align-items-center"
