--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -554,7 +554,7 @@
                 <td class="w-25"><input class="small rounded-0 form-control-sm border-0" id="inquirySheetNextFollowUp"
                                         readonly value="2023-10-26 at 00:00"></td>
                 <td class="fw-bold w-25">Description</td>
-                <td><textarea class="small rounded-0 form-control-sm border-0" id="inquirySheetDescription"></textarea>
+                <td><textarea class="small rounded-0 form-control-sm border-0" id="inquirySheetDescription" readonly></textarea>
                 </td>
             </tr>
             </tbody>
