--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -539,12 +539,12 @@
                                         value="0781011144"></td>
                 <td class="fw-bold w-25">Email</td>
                 <td><input class="small rounded-0 form-control-sm border-0" id="inquirySheetEmail" readonly
-                           value="eamalindu@gmail.com"></td>
+                           value="eamalindu@gmail.com" placeholder="Optional"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Optional Number</td>
                 <td class="w-25"><input class="small rounded-0 form-control-sm border-0" id="inquirySheetSecondaryMobile" readonly
-                                        value="0781011144"></td>
+                                        value="0781011144" placeholder="Optional"></td>
                 <td class="fw-bold w-25">NIC</td>
                 <td><input class="small rounded-0 form-control-sm border-0" id="inquirySheetIdValue" readonly
                            value="983151108V"></td>
