--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -403,7 +403,7 @@
             <button class="btn btn-sm bg-info rounded-0 text-white" onclick="rowEdit()"><i class="fa-regular fa-pen-to-square"></i> Edit
                 Info
             </button>
-            <button class="btn btn-sm bg-warning rounded-0 text-white"><i class="fa-solid fa-arrows-rotate"></i> Update
+            <button class="btn btn-sm bg-warning rounded-0 text-white" id="btnInquirySheetUpdate"><i class="fa-solid fa-arrows-rotate"></i> Update
             </button>
         </div>
         <h3 class="align-items-center"
