--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -400,7 +400,7 @@
                             class="fa-solid fa-thumbs-down"></i> Dropped</a></li>
                 </ul>
             </div>
-            <button class="btn btn-sm bg-info rounded-0 text-white" onclick="rowEdit()"><i class="fa-regular fa-pen-to-square"></i> Edit
+            <button class="btn btn-sm bg-info rounded-0 text-white" onclick="inquiryEdit()"><i class="fa-regular fa-pen-to-square"></i> Edit
                 Info
             </button>
             <button class="btn btn-sm bg-warning rounded-0 text-white" id="btnInquirySheetUpdate"><i class="fa-solid fa-arrows-rotate"></i> Update
