--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -250,14 +250,15 @@
     <div class="offcanvas-body">
         <div class="card border-0">
             <div class="card-body border-0">
-                <form onsubmit="return false" id="frmNewInquiry">
+                <form id="frmNewInquiry" onsubmit="return false">
                     <div class="mb-2">
                         <div class="form-label">
                             <label class="fw-bold required small" for="inquirySource">Source</label>
                         </div>
                         <div class="input-group">
                             <select class="form-select rounded-0 chosen-inquiry"
-                                    data-placeholder="Please Select a Source" id="inquirySource" onchange="selectDynamicValueValidator(this,'','newInquiry','sourceId')"
+                                    data-placeholder="Please Select a Source" id="inquirySource"
+                                    onchange="selectDynamicValueValidator(this,'','newInquiry','sourceId')"
                                     required>
                                 <option value=""></option>
                                 <option value="Cold Calling">Cold Calling</option>
@@ -279,7 +280,8 @@
                         </div>
                         <div class="input-group">
                             <select class="form-select rounded-0 chosen-inquiry"
-                                    data-placeholder="Please Select a Course" id="inquiryCourse" onchange="selectDynamicValueValidator(this,'','newInquiry','courseId')"
+                                    data-placeholder="Please Select a Course" id="inquiryCourse"
+                                    onchange="selectDynamicValueValidator(this,'','newInquiry','courseId')"
                                     required>
                                 <option value=""></option>
                                 <option>Diploma in IT</option>
@@ -336,7 +338,8 @@
                         </div>
                         <div class="input-group">
                             <select class="form-select rounded-0 chosen-inquiry-ID" data-placeholder="Please Select"
-                                    id="inquiryIdOption" onchange="selectStaticValueValidator(this,'','newInquiry','idType')"
+                                    id="inquiryIdOption"
+                                    onchange="selectStaticValueValidator(this,'','newInquiry','idType')"
                                     required>
                                 <option value=""></option>
                                 <option value="NIC">NIC</option>
@@ -359,7 +362,9 @@
                         <div class="form-label">
                             <label class="fw-bold required small" for="inquiryDescription">Description</label>
                         </div>
-                        <textarea class="rounded-0 form-control" cols="80" id="inquiryDescription" onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{20,}$','newInquiry','description')" required
+                        <textarea class="rounded-0 form-control" cols="80" id="inquiryDescription"
+                                  onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{20,}$','newInquiry','description')"
+                                  required
                                   rows="4"></textarea>
                         <div class="text-muted small"><small> a short description which will be useful for the
                             counsellor who will be handling this inquiry</small></div>
@@ -400,10 +405,12 @@
                             class="fa-solid fa-thumbs-down"></i> Dropped</a></li>
                 </ul>
             </div>
-            <button class="btn btn-sm bg-info rounded-0 text-white" onclick="inquiryEdit()"><i class="fa-regular fa-pen-to-square"></i> Edit
+            <button class="btn btn-sm bg-info rounded-0 text-white" onclick="inquiryEdit()"><i
+                    class="fa-regular fa-pen-to-square"></i> Edit
                 Info
             </button>
-            <button class="btn btn-sm bg-warning rounded-0 text-white" id="btnInquirySheetUpdate"><i class="fa-solid fa-arrows-rotate"></i> Update
+            <button class="btn btn-sm bg-warning rounded-0 text-white" id="btnInquirySheetUpdate"><i
+                    class="fa-solid fa-arrows-rotate"></i> Update
             </button>
         </div>
         <h3 class="align-items-center"
@@ -428,7 +435,9 @@
                                 </div>
                                 <div class="input-group">
                                     <select class="form-select rounded-0 chosen-inquiry"
-                                            data-placeholder="Please Select a Type " id="inquiryFollowUpType" onchange="selectStaticValueValidator(this,'','newFollowUp','type')" required>
+                                            data-placeholder="Please Select a Type " id="inquiryFollowUpType"
+                                            onchange="selectStaticValueValidator(this,'','newFollowUp','type')"
+                                            required>
                                         <option value=""></option>
                                         <option>Generic Update</option>
                                         <option>Phone Call</option>
@@ -443,8 +452,9 @@
                                 <div class="form-label">
                                     <label class="fw-bold required small" for="inquiryFollowUpContent">Content</label>
                                 </div>
-                                <textarea class="rounded-0 form-control" cols="80" id="inquiryFollowUpContent" required
-                                          rows="4" onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{3,}$','newFollowUp','content')"></textarea>
+                                <textarea class="rounded-0 form-control" cols="80" id="inquiryFollowUpContent" onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{3,}$','newFollowUp','content')"
+                                          required
+                                          rows="4"></textarea>
                                 <div class="text-muted small"><small>Summary of the Customer Feedback.</small></div>
                             </div>
                         </div>
@@ -495,14 +505,17 @@
                                     <label class="fw-bold required small" for="inquiryFollowUpTime">Convenient Time To
                                         Contact</label>
                                 </div>
-                                <input class="form-control rounded-0" id="inquiryFollowUpTime" onchange="inputDateTimeValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][0-9]{2}[:][0-9]{2}$','newFollowUp','nextFollowup')" required>
+                                <input class="form-control rounded-0" id="inquiryFollowUpTime"
+                                       onchange="inputDateTimeValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][0-9]{2}[:][0-9]{2}$','newFollowUp','nextFollowup')"
+                                       required>
                                 <div class="text-muted small"><small>When do you want to contact this customer
                                     again?</small></div>
                             </div>
                         </div>
                         <div class="w-100 ">
                             <button class="btn bg-purple text-white rounded-0 btn-block w-100"
-                                    id="inquiryFollowUpConfirm" type="submit" onclick="newFollowUpSubmit()">Add Follow-Up
+                                    id="inquiryFollowUpConfirm" onclick="newFollowUpSubmit()" type="submit">Add
+                                Follow-Up
                             </button>
                         </div>
                     </div>
@@ -518,7 +531,8 @@
             <tr>
                 <td class="fw-bold w-25">Course</td>
                 <td class="w-25">
-                    <select class="form-select rounded-0 small form-select-sm" id="inquirySheetCourse" onchange="selectDynamicValueValidator(this,'','newInquiry','courseId')" required disabled>
+                    <select class="form-select rounded-0 small form-select-sm" disabled
+                            id="inquirySheetCourse" onchange="selectDynamicValueValidator(this,'','newInquiry','courseId')" required>
                         <option value=""></option>
                         <option>Diploma in IT</option>
                         <option>Diploma in Tamil</option>
@@ -527,39 +541,57 @@
                     </select>
                 </td>
                 <td class="fw-bold w-25">Source</td>
-                <td><input class="small rounded-0 form-control-sm border-0" id="inquirySheetSource" readonly
-                           value="Personal Contact"></td>
+                <td>
+                    <input class="small rounded-0 form-control-sm border-0" id="inquirySheetSource" readonly
+                           value="Personal Contact">
+                </td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">First Name</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" id="inquirySheetFirstName" readonly
-                                        value="Kasun" onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,19}$','newInquiry','firstName')"></td>
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" id="inquirySheetFirstName"
+                                        onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,19}$','newInquiry','firstName')"
+                                        readonly
+                                        value="Kasun">
+                </td>
                 <td class="fw-bold w-25">Last Name</td>
-                <td><input class="small rounded-0 form-control-sm border-0" id="inquirySheetLastName" readonly
-                           value="Malhara" onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,29}$','newInquiry','lastName')"></td>
+                <td><input class="small rounded-0 form-control-sm border-0" id="inquirySheetLastName" onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,29}$','newInquiry','lastName')"
+                           readonly
+                           value="Malhara"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Phone Number</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" id="inquirySheetPrimaryMobile" readonly
-                                        value="0781011144" onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','newInquiry','primaryMobileNumber')"></td>
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" id="inquirySheetPrimaryMobile"
+                                        onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','newInquiry','primaryMobileNumber')"
+                                        readonly
+                                        value="0781011144">
+                </td>
                 <td class="fw-bold w-25">Email</td>
-                <td><input class="small rounded-0 form-control-sm border-0" id="inquirySheetEmail" readonly
-                           value="eamalindu@gmail.com" placeholder="Optional" onkeyup="inputTextValidator(this,'^[a-z|A-Z]{2,19}[@][a-z|A-Z]{2,8}[.][a-z|A-Z]{2,3}$','newInquiry','email')"></td>
+                <td><input class="small rounded-0 form-control-sm border-0" id="inquirySheetEmail" onkeyup="inputTextValidator(this,'^[a-z|A-Z]{2,19}[@][a-z|A-Z]{2,8}[.][a-z|A-Z]{2,3}$','newInquiry','email')"
+                           placeholder="Optional" readonly
+                           value="eamalindu@gmail.com">
+                </td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Optional Number</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" id="inquirySheetSecondaryMobile" readonly
-                                        value="0781011144" placeholder="Optional" onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','newInquiry','secondaryMobileNumber')"></td>
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0"
+                                        id="inquirySheetSecondaryMobile" onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','newInquiry','secondaryMobileNumber')"
+                                        placeholder="Optional" readonly
+                                        value="0781011144">
+                </td>
                 <td class="fw-bold w-25">NIC</td>
-                <td><input class="small rounded-0 form-control-sm border-0" id="inquirySheetIdValue" readonly
-                           value="983151108V" onkeyup="inputTextValidator(this,'^(?:[6-9][0-9]{8}([V]|[X]|[v]|[x]){1})|(?:[19|20][0-9]{10})$','newInquiry','idValue')"></td>
+                <td><input class="small rounded-0 form-control-sm border-0" id="inquirySheetIdValue" onkeyup="inputTextValidator(this,'^(?:[6-9][0-9]{8}([V]|[X]|[v]|[x]){1})|(?:[19|20][0-9]{10})$','newInquiry','idValue')"
+                           readonly
+                           value="983151108V">
+                </td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Convenient Time To Contact</td>
                 <td class="w-25"><input class="small rounded-0 form-control-sm border-0" id="inquirySheetNextFollowUp"
                                         readonly value="2023-10-26 at 00:00"></td>
                 <td class="fw-bold w-25">Description</td>
-                <td><textarea class="small rounded-0 form-control-sm border-0" id="inquirySheetDescription" onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{20,}$','newInquiry','description')" readonly></textarea>
+                <td><textarea class="small rounded-0 form-control-sm border-0" id="inquirySheetDescription"
+                              onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{20,}$','newInquiry','description')"
+                              readonly></textarea>
                 </td>
             </tr>
             </tbody>
@@ -567,7 +599,9 @@
         <!-- Show Added-by and added time of the inquiry here -->
         <div class="card rounded-0 mb-2">
             <div class="card-body rounded-0 pb-0">
-                <p class="small text-muted text-center">This Inquiry was Created by <span class="fw-bold" id="inquirySheetAddedBy"></span> on <span class="fw-bold" id="inquirySheetAddedDate"></span> at
+                <p class="small text-muted text-center">This Inquiry was Created by <span class="fw-bold"
+                                                                                          id="inquirySheetAddedBy"></span>
+                    on <span class="fw-bold" id="inquirySheetAddedDate"></span> at
                     <span class="fw-bold" id="inquirySheetAddedTime"></span>.</p>
             </div>
         </div>
