--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -542,8 +542,21 @@
                 </td>
                 <td class="fw-bold w-25">Source</td>
                 <td>
-                    <input class="small rounded-0 form-control-sm border-0" id="inquirySheetSource" readonly
-                           value="Personal Contact">
+                    <select class="form-select rounded-0 small form-select-sm" id="inquirySheetSource"
+                            onchange="selectDynamicValueValidator(this,'','newInquiry','sourceId')"
+                            required disabled>
+                        <option value=""></option>
+                        <option value="Cold Calling">Cold Calling</option>
+                        <option value="Facebook">Facebook</option>
+                        <option value="Leaflets">Leaflets</option>
+                        <option value="Letter Campaign">Letter Campaign</option>
+                        <option value="Personal Contact">Personal Contact</option>
+                        <option value="Phone">Phone Call</option>
+                        <option value="Seminar">Seminar</option>
+                        <option value="SMS Campaign">SMS Campaign</option>
+                        <option value="Walk-In">Walk-In</option>
+                        <option value="WhatsApp">WhatsApp</option>
+                    </select>
                 </td>
             </tr>
             <tr>
