btnInquirySheetUpdate id added

--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -409,7 +409,7 @@
                     class="fa-regular fa-pen-to-square"></i> Edit
                 Info
             </button>
-            <button class="btn btn-sm bg-warning rounded-0 text-white" onclick="inquiryUpdate()"><i
+            <button class="btn btn-sm bg-warning rounded-0 text-white" id="btnInquirySheetUpdate" onclick="inquiryUpdate()"><i
                     class="fa-solid fa-arrows-rotate"></i> Update
             </button>
         </div>
