--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -714,7 +714,7 @@
                     </fieldset>
                     <div class="mt-3 d-flex justify-content-between">
                         <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Cancel</button>
-                        <button class="btn btn-success bg-purple border-0" type="button">Dropped</button>
+                        <button class="btn btn-success bg-purple border-0" type="button" onclick="inquiryDropped()">Dropped</button>
                     </div>
                 </form>
             </div>
