--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -59,7 +59,7 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item"><a class="nav-link text-white custom-width-max-content"
                                         href="Inquiries">Inquiries</a></li>
-                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Schedules.html">Schedules</a>
+                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Schedules">Schedules</a>
                 </li>
                 <li class="nav-item dropdown-center custom-width-max-content p-0">
                     <button aria-expanded="false"
