--- a/system/src/main/resources/templates/crm/Schedules.html
+++ b/system/src/main/resources/templates/crm/Schedules.html
@@ -28,7 +28,7 @@
 <!-- Nav Bar Start -->
 <nav class="navbar navbar-expand-lg bg-purple p-1">
     <div class="container-fluid">
-        <a class="navbar-brand text-white" href="Dashboard.html"><strong>CRM</strong> : : STEAM</a>
+        <a class="navbar-brand text-white" href="Dashboard"><strong>CRM</strong> : : STEAM</a>
         <button aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarText" data-bs-toggle="collapse" type="button">
             <span class="navbar-toggler-icon" style="filter: invert(100%)"></span>
         </button>
@@ -43,8 +43,8 @@
             </ul>
             <!-- Navbar Right side -->
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Inquiries.html">Inquiries</a></li>
-                <li class="nav-item"><a class="nav-link text-white custom-width-max-content custom-active" href="Schedules.html">Schedules</a></li>
+                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Inquiries">Inquiries</a></li>
+                <li class="nav-item"><a class="nav-link text-white custom-width-max-content custom-active" href="Schedules">Schedules</a></li>
                 <li class="nav-item dropdown-center custom-width-max-content p-0">
                     <button aria-expanded="false" class="nav-link btn bg-steam-green text-white dropdown-toggle custom-width-max-content border-0" data-bs-toggle="dropdown">Reports</button>
                     <ul class="dropdown-menu dropdown-menu-end rounded-0">
