inquirySheetInputs added instead of using input

--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -563,26 +563,26 @@
             </tr>
             <tr>
                 <td class="fw-bold w-25">First Name</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" id="inquirySheetFirstName"
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetFirstName"
                                         onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,19}$','newInquiry','firstName')"
                                         disabled
                                         value="Kasun">
                 </td>
                 <td class="fw-bold w-25">Last Name</td>
-                <td><input class="small rounded-0 form-control-sm border-0" id="inquirySheetLastName"
+                <td><input class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetLastName"
                            onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,29}$','newInquiry','lastName')"
                            disabled
                            value="Malhara"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Phone Number</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" id="inquirySheetPrimaryMobile"
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetPrimaryMobile"
                                         onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','newInquiry','primaryMobileNumber')"
                                         disabled
                                         value="0781011144">
                 </td>
                 <td class="fw-bold w-25">Email</td>
-                <td><input class="small rounded-0 form-control-sm border-0" id="inquirySheetEmail"
+                <td><input class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetEmail"
                            onkeyup="inputTextValidator(this,'^[a-z|A-Z]{2,19}[@][a-z|A-Z]{2,8}[.][a-z|A-Z]{2,3}$','newInquiry','email')"
                            placeholder="Optional" disabled
                            value="eamalindu@gmail.com">
@@ -590,14 +590,14 @@
             </tr>
             <tr>
                 <td class="fw-bold w-25">Optional Number</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm border-0"
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0 inquirySheetInputs"
                                         id="inquirySheetSecondaryMobile"
                                         onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','newInquiry','secondaryMobileNumber')"
                                         placeholder="Optional" disabled
                                         value="0781011144">
                 </td>
                 <td class="fw-bold w-25">NIC</td>
-                <td><input class="small rounded-0 form-control-sm border-0" id="inquirySheetIdValue"
+                <td><input class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetIdValue"
                            onkeyup="inputTextValidator(this,'^(?:[6-9][0-9]{8}([V]|[X]|[v]|[x]){1})|(?:[19|20][0-9]{10})$','newInquiry','idValue')"
                            disabled
                            value="983151108V">
@@ -608,7 +608,7 @@
                 <td class="w-25"><input class="small rounded-0 form-control-sm border-0" id="inquirySheetNextFollowUp"
                                         disabled value="2023-10-26 at 00:00"></td>
                 <td class="fw-bold w-25">Description</td>
-                <td><textarea class="small rounded-0 form-control-sm border-0" id="inquirySheetDescription"
+                <td><textarea class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetDescription"
                               onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{20,}$','newInquiry','description')"
                               disabled></textarea>
                 </td>
