idType impmented in inquirysheet

--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -596,7 +596,14 @@
                                         placeholder="Optional" disabled
                                         value="0781011144">
                 </td>
-                <td class="fw-bold w-25">NIC</td>
+                <td class="fw-bold w-25">
+                    <select class="form-select rounded-0 small form-select-sm fw-bold" disabled
+                            id="inquirySheetIdType"
+                            onchange="selectStaticValueValidator(this,'','editedInquiry','idType')" required>
+                        <option value="NIC">NIC</option>
+                        <option value="POSTAL">POSTAL</option>
+                    </select>
+                </td>
                 <td><input class="small rounded-0 form-control-sm border-0 inquirySheetInputs" id="inquirySheetIdValue"
                            onkeyup="inputTextValidator(this,'^(?:[6-9][0-9]{8}([V]|[X]|[v]|[x]){1})|(?:[19|20][0-9]{10})$','editedInquiry','idValue')"
                            disabled
