--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -597,7 +597,7 @@
                                         value="0781011144">
                 </td>
                 <td class="fw-bold w-25">
-                    <select class="form-select rounded-0 small form-select-sm fw-bold" disabled
+                    <select class="form-select rounded-0 small form-select-sm fw-bold inquirySheetInputs" disabled
                             id="inquirySheetIdType"
                             onchange="selectStaticValueValidator(this,'','editedInquiry','idType')" required>
                         <option value="NIC">NIC</option>
